# maras

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  MARAS_IgnoreNpcs_DISTR.ini  README.md  TT_MARAS.esp  rename.json
.github/workflows/: main-release.yml  patches-release.yml  release-zip.yml
SKSE/Plugins/: PackageOverrides.ini
SKSE/Plugins/MARAS/: PackageOverrides.ini  actions.json  bonuses.json  initialData.json  marriageComplexityVariables.json  marriageDifficultyConfig.json  promptStrings.json
SKSE_Source/: CMakeLists.txt  plugin.cpp  vcpkg-configuration.json  vcpkg.json  version.rc
SKSE_Source/include/core/: AffectionService.h  BonusesService.h  DialogueEventSink.h  FormCache.h  HomeCellService.h  LoggingService.h  MarriageDifficulty.h  NPCRelationshipManager.h  NPCTypeDeterminer.h  PackageOverrideService.h  PlayerHouseService.h  PollingService.h  QuestEventConfigLoader.h  QuestEventHandler.h  Serialization.h  SpouseAssetsService.h  SpouseBuffService.h  SpouseHierarchyManager.h
SKSE_Source/include/papyrus/: PapyrusInterface.h
SKSE_Source/include/utils/: ActorUtils.h  Common.h  EnumUtils.h  FormUtils.h  JsonOverrideLoader.h
SKSE_Source/src/core/: AffectionService.cpp  BonusesService.cpp  DialogueEventSink.cpp  FormCache.cpp  HomeCellService.cpp  LoggingService.cpp  MarriageDifficulty.cpp  NPCRelationshipManager.cpp  NPCTypeDeterminer.cpp  PackageOverrideService.cpp  PlayerHouseService.cpp  PollingService.cpp  QuestEventConfigLoader.cpp  QuestEventHandler.cpp  SpouseAssetsService.cpp  SpouseBuffService.cpp  SpouseHierarchyManager.cpp
SKSE_Source/src/papyrus/: PapyrusInterface.cpp
SKSE_Source/src/utils/: EnumUtils.cpp  FormUtils.cpp  JsonOverrideLoader.cpp
Scripts/: MARAS.pex  QF_TTM_AffectionEstrangedDiv_0500011A.pex  QF_TTM_AffectionEstrangedDivorce.pex  QF_TTM_TrackKilledSpouses.pex  QF_TTM_TrackKilledSpouses_05000069.pex  SkyMessage.pex  TTM_BreakdowCooldownSpell.pex  TTM_BreakupCooldownSpell.pex  TTM_Conditions.pex  TTM_CooldownSpell.pex  TTM_Data.pex  TTM_Debug.pex  TTM_Debug_ToggleSpouseEffect.pex  TTM_DialogueManager.pex  TTM_DialogueManagerAffectionDivorceQst.pex  TTM_DialogueManagerEnablePolygamyQst.pex  TTM_DialogueManagerMisc.pex  TTM_DialogueManagerSpouseManagement.pex  TTM_JCDomain.pex  TTM_JData.pex  TTM_JMethods.pex  TTM_JUtils.pex  TTM_MCM.pex  TTM_MCM_CurrentBuff.pex  TTM_MCM_ExplorePage.pex  TTM_MCM_NpcPage.pex  TTM_MCM_SettingsPage.pex  TTM_MCM_SpousePage.pex  TTM_MCM_State.pex  TTM_MainController.pex  TTM_MarriageDifficulty.pex  TTM_Messages.pex  TTM_PackageSpouseHomeSandbox.pex  TTM_PerkCheckDoor.pex  TTM_PlayerScript.pex  TTM_QuestAffectionEstrangedDivorce.pex  TTM_QuestCheckSpouseHome.pex  TTM_QuestDivorce.pex  TTM_QuestDivorceOnAcquireDivorceLetter.pex  TTM_QuestEnablePolygamy.pex  (+21 more)
Scripts/Source/: MARAS.psc  QF_TTM_AffectionEstrangedDivorce.psc  QF_TTM_TrackKilledSpouses.psc  QF_TTM_TrackKilledSpouses_05000069.psc  SkyMessage.psc  TTM_BreakupCooldownSpell.psc  TTM_Conditions.psc  TTM_CooldownSpell.psc  TTM_Data.psc  TTM_Debug.psc  TTM_Debug_ToggleSpouseEffect.psc  TTM_DialogueManager.psc  TTM_DialogueManagerAffectionDivorceQst.psc  TTM_DialogueManagerEnablePolygamyQst.psc  TTM_DialogueManagerMisc.psc  TTM_DialogueManagerSpouseManagement.psc  TTM_JCDomain.psc  TTM_JData.psc  TTM_JMethods.psc  TTM_JUtils.psc  TTM_MCM.psc  TTM_MCM_CurrentBuff.psc  TTM_MCM_ExplorePage.psc  TTM_MCM_NpcPage.psc  TTM_MCM_SettingsPage.psc  TTM_MCM_SpousePage.psc  TTM_MCM_State.psc  TTM_MainController.psc  TTM_MarriageDifficulty.psc  TTM_Messages.psc  TTM_PackageSpouseHomeSandbox.psc  TTM_PerkCheckDoor.psc  TTM_PlayerScript.psc  TTM_QuestAffectionEstrangedDivorce.psc  TTM_QuestCheckSpouseHome.psc  TTM_QuestDivorce.psc  TTM_QuestDivorceOnAcquireDivorceLetter.psc  TTM_QuestEnablePolygamy.psc  TTM_QuestTrackKilledSpouses.psc  TTM_QuestTrackKilledSpousesWI.psc  (+18 more)
Seq/: TT_MARAS.seq
Strings/: TT_MARAS_English.DLSTRINGS  TT_MARAS_English.ILSTRINGS  TT_MARAS_English.STRINGS
docs/: ADVANCED_CONFIGURATION_AND_MODDING.md  AFFECTION_SYSTEM.md  ARCHETYPES_AND_BUFFS.md  JSON-CONFIG.md  MCM.md  MCM_BUFF.md  MCM_NPC.md  MCM_Settings.md  MarriageDifficultyConfig.md  PACKAGE_OVERRIDE.md  PLAYER_GUIDE.md  QUEST_TRACKER.md  SKYRIMNET.md  USER-GUIDE.md
interface/translations/: TT_MARAS_ENGLISH.txt
patches/: version.txt
patches/customFollowers/Aniya/: AniyaTypesOverride.json
patches/customFollowers/Astrid - Heart of Ice/: AstridHeartOfIceMarriageQuest.json  AstridHeartOfIceTypesOverride.json  AstridHoI_IgnoreMarasProposal_DISTR.ini
patches/customFollowers/Auri/: AuriTypesOverride.json
patches/customFollowers/Kaidan - AIO/: KaidanMarriageQuest.json  KaidanTypesOverride.json  Kaidan_IgnoreMarasProposal_DISTR.ini
patches/customFollowers/Kaidan - KRCE/: KaidanMarriageQuest.json  KaidanTypesOverride.json  Kaidan_IgnoreMarasProposal_DISTR.ini
patches/customFollowers/Livia - Death Consumes All/: LiviaDeathConsumesAllTypesOverride.json  Livia_IgnoreMarasProposal_DISTR.ini
patches/customFollowers/Lyssia/: LyssiaTypesOverride.json  (+1 more)
patches/fomod/: ModuleConfig.xml  info.xml
patches/npcOverrides/: Harkon.json  Serana.json  Valerica.json
(+359 files in other folders)
